fixed layout issue of public course list

--- a/client/src/components/FilterOption/FilterOption.module.scss
+++ b/client/src/components/FilterOption/FilterOption.module.scss
@@ -11,7 +11,7 @@
 
 .filterContainer {
   position: absolute;
-  top: 54px;
+  top: 50px;
   right: 0;
   border: 1px solid rgba(48, 51, 57, 0.15);
   z-index: 9999;
