--- a/client/src/containers/Courses/CourseList/PublicCourseList.module.scss
+++ b/client/src/containers/Courses/CourseList/PublicCourseList.module.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/global_style.scss";
 
-.course-list-container {
+.publicCourseList {
+  width: 100%;
 }
