--- a/client/styles/global_style.scss
+++ b/client/styles/global_style.scss
@@ -39,3 +39,4 @@ $color-bg-light-red: #ed455e;
 $color-bg-dark-red: #D13A50;
 
 $color-bg-gray-form: #F5F5F5;
+$color-light-black-text: #3e4247;
